fikser bug i ie 11 som gjorde at sykefraværboks ikke wrappet tekst

--- a/src/App/Hovedside/TjenesteBoksContainer/TjenesteBoksContainer.less
+++ b/src/App/Hovedside/TjenesteBoksContainer/TjenesteBoksContainer.less
@@ -1,14 +1,14 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .tjenesteboks-container {
-    display: inline-block;;
+    display: flex;
     width: 100%;
     flex-direction: column;
     align-items: center;
     padding: 0rem 1rem 0rem 1rem;
 
     .tjenesteboks {
-        display: flex;
+        display: inline-block;
         width: 100%;
         background-color: white;
         margin-bottom: 2rem;
